@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-18
+DATE: 11/27/2017
+STAFF: lec
+CHANGES:
+TR12732/littriage_update_pdf was not copying file to needs_review folder
+
 TAG: littriageload-6-0-11-17
 DATE: 11/20/2017
 STAFF: lec
